add getSubscribeUsers and post message to user

--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,5 @@
 BROADCAST_SECRET=__BROADCAST_SECREET__
+DEV_MONGODB_PATH=mongodb://localhost:27017/PPAV
+PROD_MONGODB_PATH=mongodb://localhost:27017/PPAV
+DEV_BOT_TOKEN=__DEV_BOT_TOKEN__
+PROD_BOT_TOKEN=__PROD_BOT_TOKEN__
