--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "PPAV Broadcast Server",
   "main": "index.js",
   "scripts": {
-    "dev": "micro-dev -p 8080",
+    "dev": "NODE_ENV=development micro-dev -p 8080",
     "start": "yarn ;env NODE_ENV=production PORT=8080  micro ${PORT:-8080}",
     "precommit": "lint-staged",
     "lint": "eslint src",
@@ -25,7 +25,8 @@
     "micro-compress": "^1.0.0",
     "micro-cors": "^0.0.4",
     "microrouter": "^2.2.2",
-    "mongodb": "^2.2.30",
+    "moment-timezone": "^0.5.13",
+    "mongodb": "^2.2.31",
     "ramda": "^0.24.1"
   },
   "devDependencies": {
