--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "node": ">=8"
   },
   "dependencies": {
-    "axios": "^0.16.2",
+    "dateformat": "^2.0.0",
     "dotenv": "^4.0.0",
+    "messaging-api-telegram": "^0.3.4",
     "micro": "^8.0.2",
     "micro-compress": "^1.0.0",
     "micro-cors": "^0.0.4",
@@ -28,7 +29,9 @@
     "microrouter": "^2.2.2",
     "moment-timezone": "^0.5.13",
     "mongodb": "^2.2.31",
-    "ramda": "^0.24.1"
+    "p-each-series": "^1.0.0",
+    "ramda": "^0.24.1",
+    "sleep-promise": "^2.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
