--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,4 @@ DEV_MONGODB_PATH=mongodb://localhost:27017/PPAV
 PROD_MONGODB_PATH=mongodb://localhost:27017/PPAV
 DEV_BOT_TOKEN=__DEV_BOT_TOKEN__
 PROD_BOT_TOKEN=__PROD_BOT_TOKEN__
+GA_TOKEN=__GA_TOKEN__
