--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "mongodb": "^2.2.31",
     "p-each-series": "^1.0.0",
     "ramda": "^0.24.1",
-    "sleep-promise": "^2.0.0"
+    "sleep-promise": "^2.0.0",
+    "tldjs": "^2.2.0",
+    "universal-analytics": "^0.4.15"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
