--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^1.28.5",
     "dateformat": "^2.0.0",
     "dotenv": "^4.0.0",
+    "lodash": "^4.17.4",
     "messaging-api-telegram": "^0.3.4",
     "micro": "^8.0.2",
     "micro-compress": "^1.0.0",
