--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,4 @@ PROD_MONGODB_PATH=mongodb://localhost:27017/PPAV
 DEV_BOT_TOKEN=__DEV_BOT_TOKEN__
 PROD_BOT_TOKEN=__PROD_BOT_TOKEN__
 GA_TOKEN=__GA_TOKEN__
+AES_KEY=__KEY_FOR_CRYPTO__
