--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "node": ">=8"
   },
   "dependencies": {
-    "date-fns": "^1.28.5",
+    "date-fns": "^1.29.0",
     "dateformat": "^2.0.0",
     "dotenv": "^4.0.0",
     "lodash": "^4.17.4",
@@ -32,6 +32,7 @@
     "moment-timezone": "^0.5.13",
     "mongodb": "^2.2.31",
     "p-each-series": "^1.0.0",
+    "p-map": "^1.2.0",
     "ramda": "^0.24.1",
     "sleep-promise": "^2.0.0",
     "tldjs": "^2.2.0",
