--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "node": ">=12"
   },
   "dependencies": {
-    "babel-register": "^6.26.0",
+    "@babel/register": "^7.0.0",
     "date-fns": "^2.16.1",
-    "dateformat": "^3.0.3",
+    "dateformat": "^4.3.1",
     "dotenv": "^8.2.0",
     "lodash": "^4.17.20",
     "messaging-api-telegram": "^0.7.11",
@@ -30,34 +30,36 @@
     "micro-cors": "^0.1.1",
     "micro-redirect": "^1.0.2",
     "microrouter": "^3.1.3",
-    "moment-timezone": "^0.5.31",
+    "moment-timezone": "^0.5.32",
     "mongodb": "^2.2.36",
-    "p-each-series": "^2.1.0",
+    "p-each-series": "^2.2.0",
     "p-map": "^4.0.0",
     "ramda": "^0.27.1",
     "tldjs": "^2.2.0",
     "universal-analytics": "^0.4.23"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
-    "eslint": "^7.13.0",
+    "eslint": "^7.15.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-react": "^7.21.5",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
-    "lint-staged": "^10.5.1",
+    "lint-staged": "^10.5.3",
     "micro-dev": "^3.0.0",
-    "prettier": "^2.1.2",
+    "prettier": "^2.2.1",
     "supertest": "^6.0.1"
   },
   "lint-staged": {
